--- a/dashy/docker-compose.yml
+++ b/dashy/docker-compose.yml
@@ -1,13 +1,11 @@
 services:
   dashy:
-    # To build from source, replace 'image: lissy93/dashy' with 'build: .'
-    # build: .
     image: lissy93/dashy:latest
     container_name: dashy
-    # Pass in your config file below, by specifying the path on your host machine
     volumes:
-       - /home/jeremy/Server/configs/dashy/config.yml:/app/user-data/conf.yml
-       - /home/jeremy/Server/configs/dashy/appdata/:/app/user-data/
+       - /your/path/to/dashy/config.yml:/app/user-data/conf.yml
+      # bind mounting a folder to /app/user-data/ will allow you to create Pages 
+      # - /your/path/to/dashy/data/:/app/user-data/ 
     ports:
       - 4000:8080
     # Set any environmental variables
