--- a/mediaserver/kometa/docker-compose.yml.template
+++ b/mediaserver/kometa/docker-compose.yml.template
@@ -1,6 +1,6 @@
 services:
   kometa:
-    image: lscr.io/linuxserver/kometa:latest
+    image: kometateam/kometa:latest
     container_name: kometa
     environment:
       - PUID=1000
