--- a/mediaserver/docker-compose.yml.template
+++ b/mediaserver/docker-compose.yml.template
@@ -129,4 +129,20 @@ services:
      UMASK: 002
      TZ: America/New_York
 
+  kometa:
+    image: kometateam/kometa:latest
+    container_name: kometa
+    environment:
+      - PUID=1000
+      - PGID=1000
+      - TZ=Etc/UTC
+      - KOMETA_CONFIG=/config/config.yml #optional
+      - KOMETA_TIME=03:00 #optional
+      - KOMETA_RUN=False #optional
+      - KOMETA_TEST=False #optional
+      - KOMETA_NO_MISSING=False #optional
+    volumes:
+      - /path/to/kometa/config:/config
+    restart: unless-stopped
+
 
